--- a/Chords.Android/Views/SettingsView.cshtml
+++ b/Chords.Android/Views/SettingsView.cshtml
@@ -39,7 +39,7 @@
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
         <!-- Main content start -->
-        <nav class="navbar navbar-inverse" style="margin-top:20px;">
+        <nav class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-conv-collapse">
@@ -119,6 +119,19 @@
 			}
 			</span>
         </div>
+        <div class="row vertical-align" style="margin-bottom: 20px;">
+            <span class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Show tips</span>
+            <span class="col-xs-3 col-sm-3 col-md-3 col-lg-3 justify-right">
+            @if (Model.ShowTips)
+            {
+                <input type="checkbox" id="tips" name="tips" value="true" data-toggle="toggle" data-on="Yes" data-off="No" checked="checked" style="display: none;" />
+            }
+            else
+            {
+                <input type="checkbox" id="tips" name="tips" value="true" data-toggle="toggle" data-on="Yes" data-off="No" style="display: none;" />
+            }
+            </span>
+        </div>
         <div class="error">@Model.Error</div>
 		<script type="text/javascript">
 			$(document).ready(function() {
@@ -139,6 +152,10 @@
                 $('#special').on('change', function(){
                     var val = $(this).prop('checked');
                     location.href = 'hybrid:Settings?special=' + val;
+                });
+                $('#tips').on('change', function(){
+                    var val = $(this).prop('checked');
+                    location.href = 'hybrid:Settings?tips=' + val;
                 });
 			});
 		</script>
