Added menu button handler. Circle of 5ths centered on screen

--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -282,3 +282,11 @@ footer {
     top: 0;
     width: 100%;
 }
+
+.circle-svg {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
